<!--
  ~ /*
  ~  * Created by Murillo Comino on 09/02/19 15:39
  ~  * Github: github.com/MurilloComino
  ~  * StackOverFlow: pt.stackoverflow.com/users/128573
  ~  * Email: murillo_comino@hotmail.com
  ~  *
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 24/10/18 00:20
  ~  */
  -->

<resources>
    <string name="titleApp" translatable="false">CourseImpacta</string>
    <string name="lab01_toast_clicado">%s clicked</string>
    <string name="lab01_tv_labs">L\na\nb\ns</string>
    <string name="lab01_tv_laboratorios">Laboratories</string>
    <string name="lab01_bt_megasena">Mega Sena</string>
    <string name="lab01_bt_gorjeta">Gratuity</string>
    <string name="lab01_bt_intent">Camera</string>
    <string name="lab01_bt_cpf">CPF Validator</string>
    <string name="lab01_bt_game01">Tic-tac-toe</string>
    <string name="lab01_bt_gps">Locate me</string>
    <string name="lab01_bt_sqlite">Notes</string>
    <string name="lab01_bt_cep">Search zip code</string>
    <string name="lab01_bt_game02">Ball game</string>
    <string name="lab01_bt_service" translatable="false">Music Player</string>
    <string name="lab01_bt_bluetooth" translatable="false">Chat Blue</string>
    <string name="lab01_bt_sms">SMS Messages</string>
    <string name="lab01_bt_camera">Camera</string>
    <string name="lab01_bt_game03">Cannon Game</string>
    <string name="lab01_bt_share_preferences">Settings</string>

    <string name="lab02_tv_mega" translatable="false">M\ne\ng\na</string>
    <string name="lab02_tv_sena" translatable="false">S\ne\nn\na</string>
    <string name="lab02_tv_jogo" translatable="false">00 00 00 00 00 00</string>
    <string name="lab02_tv_jogos">Games</string>
    <string name="lab02_sb_sorteio" translatable="false">10</string>
    <string name="lab02_bt_sortear">Raffle</string>
    <string name="lab02_toast_sorteio_min">Minimum of draw de %s </string>
    <string name="lab02_toast_sorteio_max">Maximum of draw %s </string>
    <string name="clipboard"> Copy Text </string>

    <string name="lab03_et_0" translatable="false">0.00</string>
    <string name="lab03_tv_gorjeta">Gratuity</string>
    <string name="lab03_tv_conta">Account: </string>
    <string name="lab03_tv_percent" translatable="false">%s%%</string>
    <string name="lab03_tv_percent_1" translatable="false">10%</string>
    <string name="lab03_tv_percent_2" translatable="false">15%</string>
    <string name="lab03_tv_percent_3" translatable="false">20%</string>
    <string name="lab03_tv_percent_def" translatable="false">40%</string>
    <string name="lab03_tv_total">Total</string>
    <string name="lab03_tv_def">Define: </string>
    <string name="lab03_tv_valor">Amount</string>
    <string name="lab03_copy">Copy Text</string>

    <string name="lab04_bt_imagem_capturar">Image</string>
    <string name="lab04_toast_imagem_cancelada">Image Canceled</string>
    <string name="lab04_bt_video_capturar">Video</string>
    <string name="lab04_toast_video_cancelada">Video Canceled</string>

    <string name="lab05_et_cpf" translatable="false">CPF</string>
    <string name="lab05_bt_validar">Validate</string>

    <string name="app_name" translatable="false">CourseImpacta</string>
    <string name="cpf_nulo">Null CPF!</string>
    <string name="cpf_vazio">Empty CPF!</string>
    <string name="cpf_11">CPF doesn\'t contain 11 digits</string>
    <string name="cpf_invalido">Invalid CPF!</string>
    <string name="doc_valido">Valid Document!</string>
    <string name="player_1_0">Player 1: 0</string>
    <string name="player_2_0">Player 2: 0</string>
    <string name="reset">RESET</string>
    <string name="player_1">Player 1:</string>
    <string name="player_2">Player 2:</string>
    <string name="player_1_vence">Player 1 wins!</string>
    <string name="player_2_vence">Player 2 wins!</string>
    <string name="draw">Draw!</string>

    <string name="lab07_tv_endereco">Address</string>
    <string name="lab07_tv_coordenadas">Localization</string>
    <string name="lab07_toast_ok" translatable="false">%s :D</string>
    <string name="lab07_toast_nok" translatable="false">%s :(</string>
    <string name="lab07_tv_latitude">Latitude</string>
    <string name="lab07_tv_longitude">Longitude</string>
    <string name="lab07_tv_semEndereco">Address not found</string>
    <string name="lab07_tv_semProvedor">Provider not found</string>
    <string name="lab07_location_maps">See your location</string>
    <string name="lab07_installgoogle">You need to install Google Maps</string>

    <string name="lab08_notas">Notes</string>
    <string name="lab08_acoes">List by…</string>
    <string name="lab08_nota_titulo">Note</string>
    <string name="lab08_nota_observacao">Observations of this Note</string>
    <string name="lab08_nota_nova">New Note</string>
    <string name="lab08_nota_fazer">Notes to be made</string>
    <string name="lab08_nota_hoje">We have %s notes for today</string>
    <string name="lab08_nota_feita">Made</string>
    <string name="lab08_nota_agenda_data">Schedule date…</string>
    <string name="lab08_nota_agenda_hora">Schedule hour…</string>
    <string name="lab08_nota_perdida">Lost</string>
    <string name="lab08_notas_nao_feitas">Notes not updated</string>
    <string name="lab08_nota_agenda_em">Scheduled for: %s</string>
    <string name="lab08_nota_feita_em">Made in: %s</string>
    <string name="lab08_nota_agendar">Schedule?</string>
    <string name="lab08_nota_apagar">Erase note(s)</string>
    <string name="lab08_nota_detalhe">Note details</string>
    <string name="lab08_nota_atualizar">Update note</string>
    <string name="lab08_nota_apagada">Deleted</string>
    <string name="lab08_confirma">Confirm?</string>
    <string name="lab08_nota_selecione">Select to delete!!</string>
    <string name="lab08_nota_cancelar">Cancel Note</string>


</resources>
