<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Lab01.Title"
        android:text="@string/lab01_bt_gps"
        android:paddingBottom="20dp"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab07_tv_coordenadas"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lab07_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lab07_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/lab07_tv_endereco"
    android:textSize="20sp" />

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/lab07_tv_endereco" />

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab07_location_maps"
        android:paddingBottom="5dp"
        />
    <ImageButton
        android:id="@+id/lab07_btn_googlemaps"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="250sp"
        android:contentDescription="@string/lab07_tv_coordenadas"
        android:background="@mipmap/location" />



</LinearLayout>