<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Created by Murillo Comino on 09/02/19 18:15
  ~  * Github: github.com/MurilloComino
  ~  * StackOverFlow: pt.stackoverflow.com/users/128573
  ~  * Email: murillo_comino@hotmail.com
  ~  *
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 09/02/19 18:15
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        style="@style/AppTheme.Lab01.Title"
        android:text="@string/lab01_bt_cpf" />

    <EditText
        android:id="@+id/lab05_et_cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:hint="@string/lab05_et_cpf"
        android:inputType="number" />

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/colorAccent"
        android:onClick="validar"
        android:text="@string/lab05_bt_validar"
        android:textColor="#ffffff" />
</LinearLayout>