<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lab01_bt_sqlite"
        style="@style/AppTheme.Lab01.Title"
        android:text="@string/lab01_bt_sqlite" />

    <EditText
        android:id="@+id/lab08_nota_titulo"
        style="?android:weekDayTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lab08_nota_titulo"
        android:inputType="textCapWords"
        android:lineSpacingMultiplier="1.2"
        android:padding="16dp"
        tools:ignore="Autofill" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1, 2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <CheckBox
                android:id="@+id/lab08_agenda_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lab08_nota_agendar" />

            <TextView
                android:id="@+id/lab08_nota_data"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/lab08_nota_observacao"
            style="?android:weekDayTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/lab08_nota_observacao"
            android:inputType="textMultiLine"
            android:lineSpacingMultiplier="1.2"
            android:padding="16dp"
            tools:ignore="Autofill" />
    </ScrollView>


</LinearLayout>