<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Created by Murillo Comino on 09/02/19 15:39
  ~  * Github: github.com/MurilloComino
  ~  * StackOverFlow: pt.stackoverflow.com/users/128573
  ~  * Email: murillo_comino@hotmail.com
  ~  *
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 09/02/19 15:10
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/AppTheme.Lab01.Title"
        android:text="@string/lab01_bt_camera" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/lab04_dimen_3">

        <Button
            android:id="@+id/lab04_bt_imagem_capturar"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_menu_camera"
            android:text="@string/lab04_bt_imagem_capturar" />

        <Button
            android:id="@+id/lab04_bt_video_capturar"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_menu_camera"
            android:text="@string/lab04_bt_video_capturar" />

    </LinearLayout>
    <FrameLayout
        android:id="@+id/lab04_fl_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />
</LinearLayout>