<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Created by Murillo Comino on 09/02/19 15:39
  ~  * Github: github.com/MurilloComino
  ~  * StackOverFlow: pt.stackoverflow.com/users/128573
  ~  * Email: murillo_comino@hotmail.com
  ~  *
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 25/10/18 23:12
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/lab03_margin"
        android:stretchColumns="1, 2"
        tools:ignore="UselessParent">

        <TableRow
            android:id="@+id/lab03_linha01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/lab03_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:labelFor="@+id/lab03_et_conta"
                android:text="@string/lab03_tv_conta" 
                android:textSize="@dimen/lab03_textSize"/>

            <EditText
                android:textSize="@dimen/lab03_textSize"
                android:id="@+id/lab03_et_conta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:hint="@string/lab03_et_0"
                android:autofillHints=""
                tools:ignore="LabelFor"
                tools:targetApi="o">

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/lab03_linha02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/lab03_margin">

            <TextView
                android:textSize="@dimen/lab03_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="center"
                android:text="@string/lab03_tv_gorjeta" />

            <TextView
                android:textSize="@dimen/lab03_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lab03_tv_valor" />
        </TableRow>

        <TableRow
            android:id="@+id/lab03_linha03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/lab03_margin">

            <TextView
                android:textSize="@dimen/lab03_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lab03_tv_percent_1" />

            <EditText
                android:textSize="@dimen/lab03_textSize"
                android:id="@+id/lab03_et_gorjeta_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/lab03_et_0"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <EditText
                android:textSize="@dimen/lab03_textSize"
                android:id="@+id/lab03_et_valor_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/lab03_et_0"
                android:autofillHints=""
                tools:ignore="LabelFor"
                tools:targetApi="o" />
        </TableRow>

        <TableRow
            android:id="@+id/lab03_linha04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/lab03_margin">

            <TextView
                android:textSize="@dimen/lab03_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lab03_tv_percent_2" />

            <EditText
                android:textSize="@dimen/lab03_textSize"
                android:id="@+id/lab03_et_gorjeta_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/lab03_et_0"
                android:autofillHints=""
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <EditText
                android:textSize="@dimen/lab03_textSize"
                android:id="@+id/lab03_et_valor_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/lab03_et_0"
                android:autofillHints=""
                tools:targetApi="o"
                tools:ignore="LabelFor" />
        </TableRow>


        <TableRow
            android:id="@+id/lab03_linha05"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/lab03_margin">

            <TextView
                android:textSize="@dimen/lab03_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lab03_tv_percent_3" />

            <EditText
                android:textSize="@dimen/lab03_textSize"
                android:id="@+id/lab03_et_gorjeta_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/lab03_et_0"
                android:autofillHints=""
                tools:targetApi="o"
                tools:ignore="LabelFor" />

            <EditText
                android:textSize="@dimen/lab03_textSize"
                android:id="@+id/lab03_et_valor_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/lab03_et_0"
                android:autofillHints=""
                tools:ignore="LabelFor"
                tools:targetApi="o" />
        </TableRow>

        <TableRow
            android:id="@+id/lab03_linha06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/lab03_margin">

            <TextView
                android:textSize="@dimen/lab03_textSize"
                android:id="@+id/lab03_tv_def"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/lab03_tv_percent_def" />

            <EditText
                android:textSize="@dimen/lab03_textSize"
                android:id="@+id/lab03_et_gorjeta_def"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/lab03_et_0"
                android:autofillHints=""
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <EditText
                android:textSize="@dimen/lab03_textSize"
                android:id="@+id/lab03_et_valor_def"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/lab03_et_0"
                android:autofillHints=""
                tools:ignore="LabelFor"
                tools:targetApi="o" />
        </TableRow>

        <TableRow
            android:layout_marginTop="30dp"
            android:id="@+id/lab03_linha07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/lab03_margin">

            <TextView
                android:textSize="@dimen/lab03_textSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:labelFor="@+id/lab03_sb_def"
                android:text="@string/lab03_tv_def" />

            <SeekBar

                android:padding="10dp"
                android:id="@+id/lab03_sb_def"
                android:layout_span="2"
                android:progress="@integer/lab03_percent_def" />
        </TableRow>

    </TableLayout>
</LinearLayout>