<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".lab06.JogoVelhaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/player_1_0"
            android:textSize="30sp" />

        <View
            android:layout_width="15dp"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/text_view_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/player_2_0"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="#000000"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_00"
                style="@style/AppTheme.Lab01.Button.Blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textSize="60sp" />

            <Button
                android:id="@+id/button_01"
                style="@style/AppTheme.Lab01.Button.Blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textSize="60sp" />

            <Button
                android:id="@+id/button_02"
                style="@style/AppTheme.Lab01.Button.Blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textSize="60sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_10"
                style="@style/AppTheme.Lab01.Button.Blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textSize="60sp" />

            <Button
                android:id="@+id/button_11"
                style="@style/AppTheme.Lab01.Button.Blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textSize="60sp" />

            <Button
                android:id="@+id/button_12"
                style="@style/AppTheme.Lab01.Button.Blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textSize="60sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_20"
                style="@style/AppTheme.Lab01.Button.Blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textSize="60sp" />

            <Button
                android:id="@+id/button_21"
                style="@style/AppTheme.Lab01.Button.Blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textSize="60sp" />

            <Button
                android:id="@+id/button_22"
                style="@style/AppTheme.Lab01.Button.Blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textSize="60sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">


        <Button
            android:id="@+id/button_reset"
            style="@style/AppTheme.Lab01.Button.Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />
    </LinearLayout>
</LinearLayout>
